🐛 Fix simplified talk page section collapsing on tablet+
The div tag was replaced with section tag in
Id032df3a420d577e42572ab128ca89a006b67ffe. This commit updates the css
to reflect that on simplified talk pages.

--- a/resources/skins.minerva.talk.styles/talkpage.less
+++ b/resources/skins.minerva.talk.styles/talkpage.less
@@ -42,7 +42,7 @@
 	// stylelint-disable-next-line selector-max-id
 	.toc,
 	#mf-section-0,
-	.section-heading + div {
+	.section-heading + .collapsible-block {
 		display: none;
 	}
 
